# omega

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  OMEGA.md  README.md  WHITEPAPER.md  config.example.toml  flake.nix  install.sh
.claude/agents/: analyst.md  architect.md  blockchain-debug.md  blockchain-network.md  codebase-expert.md  developer.md  qa.md  reviewer.md  stress-tester.md  test-writer.md
.claude/commands/: workflow-blockchain-debug.md  workflow-blockchain-network.md  workflow-feature.md  workflow-improve.md  workflow-new-feature.md  workflow-new.md  workflow-stress-test.md
.github/: release.yml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: api.rs  claudemd.rs  init.rs  init_google.rs  init_wizard.rs  main.rs  provider_builder.rs  service.rs  task_confirmation.rs  uninstall.rs
backend/src/commands/: learning.rs  mod.rs  settings.rs  status.rs  tests.rs
backend/src/gateway/: builds.rs  (+23 more)
crates/omega-channels/: Cargo.toml
crates/omega-channels/src/: lib.rs  telegram.rs  whatsapp.rs  whatsapp_store.rs  whisper.rs
crates/omega-channels/src/telegram/: mod.rs  polling.rs  send.rs  tests.rs  types.rs
crates/omega-channels/src/whatsapp/: bot.rs  channel.rs  events.rs  mod.rs  qr.rs  send.rs  tests.rs
crates/omega-channels/src/whatsapp_store/: app_sync_store.rs  device_store.rs  mod.rs  protocol_store.rs  signal_store.rs
crates/omega-core/: Cargo.toml
crates/omega-core/src/: config.rs  context.rs  error.rs  lib.rs  message.rs  sanitize.rs  traits.rs
crates/omega-core/src/config/: channels.rs  defaults.rs  mod.rs  prompts.rs  providers.rs  tests.rs
crates/omega-memory/: Cargo.toml
crates/omega-memory/migrations/: 001_init.sql  002_audit_log.sql  006_limitations.sql  007_task_type.sql  010_outcomes.sql
crates/omega-memory/src/: audit.rs  lib.rs  store.rs
crates/omega-memory/src/store/: context.rs  conversations.rs  facts.rs  messages.rs  mod.rs  outcomes.rs  tasks.rs  tests.rs
crates/omega-providers/: Cargo.toml
crates/omega-quant/: Cargo.toml
crates/omega-quant/src/: binance_auth.rs  executor.rs  lib.rs  market_data.rs  signal.rs
crates/omega-quant/src/executor/: ibkr.rs  mod.rs  orders.rs  tests.rs
crates/omega-sandbox/: Cargo.toml
crates/omega-sandbox/src/: landlock_sandbox.rs  lib.rs  seatbelt.rs
crates/omega-skills/: Cargo.toml
crates/omega-skills/src/: lib.rs  parse.rs  projects.rs  skills.rs
crates/omega-skills/src/builtin/: mod.rs
docs/: DOCS.md  agentic-tools.md  architecture.md  channels-telegram.md  channels-whatsapp.md  claudemd.md  config-example-toml.md  core-config.md  core-context.md  core-lib.md  core-message.md  gitignore.md  heartbeat.md  introspection.md  memory-audit.md  memory-cargo-toml.md  memory-lib.md  memory-migration-001.md  memory-migration-003.md  memory-migration-006.md  memory-migration-007.md  memory-migration-008.md  memory-migration-010.md  memory-migration-012.md  memory-store.md  providers-claude-code.md  providers.md  quant.md  readme-md.md  release-process.md  sandbox-cargo-toml.md  sandbox-lib.md  scheduler.md  skills-cargo-toml.md  skills-lib.md  src-api-rs.md  src-commands-rs.md  src-gateway-rs.md  src-i18n-rs.md  src-init-rs.md  (+6 more)
docs/.workflow/: audit-fix-progress.md  developer-progress.md  feature-evaluation.md  milestone-progress.md  role-audit-omega-brain.md
docs/audits/: audit-builds-2026-02-27.md
docs/functionalities/: FUNCTIONALITIES.md  builds-functionalities.md  channels-functionalities.md  commands-functionalities.md  core-sandbox-functionalities.md  gateway-core-functionalities.md  gateway-functionalities.md  heartbeat-functionalities.md  keywords-functionalities.md  markers-functionalities.md  memory-functionalities.md  projects-skills-functionalities.md  providers-functionalities.md  scheduler-functionalities.md
docs/qa/: google-auth-M1-qa-report.md  heartbeat-duplicate-project-qa.md  heartbeat-suppression-qa.md  uninstall-M1-qa-report.md
docs/reviews/: google-auth-M1-review.md  uninstall-M1-review.md
docs/sync/: sync-2026-03-01.md
docs/understanding/: PROJECT-UNDERSTANDING.md
prompts/: SYSTEM_PROMPT.md  WELCOME.toml  WORKSPACE_CLAUDE.md
skills/binance-quant/: SKILL.md
skills/doli-miner/: SKILL.md
skills/ibkr-quant/: SKILL.md
skills/omg-gog/: SKILL.md
skills/playwright-mcp/: SKILL.md
skills/playwright-mcp-1.0.0/: SKILL.md
specs/: SPECS.md  cargo-toml-root.md  channels-lib.md  channels-telegram.md  channels-whatsapp.md  claude-md.md  config-example-toml.md  core-config.md  core-context.md  core-lib.md  core-message.md  gitignore.md  google-auth-architecture.md  google-auth-requirements.md  memory-cargo-toml.md  memory-lib.md  memory-migration-003.md  memory-migration-006.md  memory-migration-007.md  memory-migration-008.md  memory-migration-010.md  memory-store.md  provider-builder.md  providers-anthropic.md  providers-claude-code.md  providers-gemini.md  providers-lib.md  providers-ollama.md  providers-openai.md  providers-openrouter.md  providers-tools.md  quant.md  readme-md.md  sandbox-cargo-toml.md  sandbox-lib.md  skills-cargo-toml.md  skills-lib.md  src-claudemd-rs.md  src-commands-rs.md  src-gateway-rs.md  (+9 more)
specs/bugfixes/: builds-audit-2026-02-27-analysis.md  heartbeat-clock-drift-analysis.md  heartbeat-duplicate-project-analysis.md  heartbeat-interval-not-applied-analysis.md  heartbeat-project-scope-analysis.md  heartbeat-trading-suppression-analysis.md
specs/improvements/: build-agent-pipeline-improvement.md  build-autonomy-improvement.md  builds-routing-improvement.md  project-personality-improvement.md
src/: claudemd.rs  commands.rs  gateway.rs  i18n.rs  init.rs  main.rs  markers.rs  provider_builder.rs  service.rs  task_confirmation.rs
src/commands/: learning.rs  mod.rs  settings.rs  status.rs  tasks.rs  tests.rs
src/gateway/: heartbeat.rs  mod.rs  pipeline.rs  process_markers.rs  routing.rs  scheduler.rs  scheduler_action.rs  tests.rs
src/i18n/: commands.rs  format.rs  labels.rs  mod.rs  tests.rs
src/markers/: actions.rs  heartbeat.rs  helpers.rs  mod.rs  protocol.rs  schedule.rs  tests.rs
(+66 files in other folders)
