[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omega-cortex/omega"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Internal crates
omega-core = { path = "crates/omega-core" }
omega-providers = { path = "crates/omega-providers" }
omega-channels = { path = "crates/omega-channels" }
omega-memory = { path = "crates/omega-memory" }
omega-skills = { path = "crates/omega-skills" }
omega-sandbox = { path = "crates/omega-sandbox" }
omega-quant = { path = "crates/omega-quant" }

[package]
name = "omega"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Personal AI agent infrastructure, forged in Rust"

[[bin]]
name = "omega"
path = "src/main.rs"

[dependencies]
omega-core = { workspace = true }
omega-providers = { workspace = true }
omega-channels = { workspace = true }
omega-memory = { workspace = true }
omega-skills = { workspace = true }
omega-sandbox = { workspace = true }
omega-quant = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
libc = "0.2"
cliclack = "0.3"
console = "0.15"
