[package]
name = "omega-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Messaging platform integrations for Omega"

[dependencies]
omega-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
