[package]
name = "omega-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, config, and error handling for Omega"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
