[package]
name = "omega-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent memory system for Omega"

[dependencies]
omega-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
