[package]
name = "omega-quant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quantitative trading engine for Omega — Kalman filter, HMM regime detection, Kelly sizing, IBKR execution"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

ibapi = "2.7"
rand = "0.8"
futures = "0.3"
