[package]
name = "omega-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure execution environment for Omega"

[dependencies]
omega-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
