[package]
name = "omega-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure execution environment for Omega"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
