[package]
name = "omega-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill and plugin system for Omega"

[dependencies]
omega-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
